--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "stringify-structured",
   "version": "0.0.1",
   "description": "A generalized stringification algorithm for diagnostic purposes",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "mocha",
+    "test:watch": "mocha --watch",
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/microvium/stringify-structured/issues"
   },
-  "homepage": "https://github.com/microvium/stringify-structured#readme"
+  "homepage": "https://github.com/microvium/stringify-structured#readme",
+  "devDependencies": {
+    "mocha": "^9.0.3",
+    "typescript": "^4.3.5"
+  }
 }
